# WINRUN

./: CMakeLists.txt  LICENSE  README.md  addprogramdialog.cpp  addprogramdialog.h  appscache.cpp  appscache.h  appslistwidget.cpp  appslistwidget.h  connectdialog.cpp  connectdialog.h  guestserverappsclient.cpp  guestserverappsclient.h  guestserverclient.cpp  guestserverclient.h  guestserverdialog.cpp  guestserverdialog.h  guestserverwidget.cpp  guestserverwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  winrun.pro
syscore/libvirt_rdp_manager/: Cargo.toml
syscore/libvirt_rdp_manager/src/: main.rs
syscore/serverrust/: Cargo.toml
syscore/serverrust/src/: apps.rs  main.rs  metrics.rs
