[package]
name = "libvirt_rdp_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
virt = "0.4.0"
libvirt-sys = "1.2.18"
roxmltree = "0.18"
prettytable-rs = { version = "0.10", features = ["win_crlf", "default"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio-process = "0.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.7"
indicatif = "0.17.7"
ctrlc = "3.4"
